# MATE-BA

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
Code/: Fig 1 and 2 - Molecular brightness using N data.py  Fig 3 and S3 - Thoghether - Molecular brightness for different difussion coefficient.py  Fig 4 - Molecular brightness compute using N = 100 points.py  Fig 5 - Molecular brightness for different oligomeric states.py  Fig 6 - Temporal correlation of apparent brightness.py  Fig S1  - Molecular brightness - same amount of entries.py  Fig S2 - Molecular brightness using N data - distributions with only 100 entries.py  Functions.py
Data for Figures/: Fig 4 - MAD values.txt  Fig 4 - Median values.txt  Fig S1 - 10 random values - Epsilons distributions - UN correlated data.txt  Fig S1 - 10 random values - Epsilons distributions - correlated data.txt  Fig S2 - k random values - Epsilon distributions - UN correlated data.txt  Fig S2 - k random values - Epsilon distributions - correlated data.txt  Fig S2 - k random values - I mean distributions - UN correlated data.txt  Fig S2 - k random values - I mean distributions - correlated data.txt  Fig S2 - k random values - Variance distributions - UN correlated data.txt  Fig S2 - k random values - Variance distributions - correlated data.txt
